fixed spacing on instructions header

--- a/src/app/welcome/welcome.component.scss
+++ b/src/app/welcome/welcome.component.scss
@@ -64,4 +64,7 @@
         margin-top: 40px;
         position: relative;
     }
+    .instructions-header {
+        margin-top: 30px;
+    }
 }
